# name: test_create_fake_sample[False-False]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'id': 'sample_1',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'job': None,
    'labels': <class 'list'> [
    ],
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    },
  }
---
# name: test_create_fake_sample[False-True]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'id': 'sample_1',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'job': None,
    'labels': <class 'list'> [
    ],
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': None,
    'reads': <class 'list'> [
    ],
    'ready': False,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    },
  }
---
# name: test_create_fake_sample[True-False]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'id': 'sample_1',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'job': None,
    'labels': <class 'list'> [
    ],
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': <class 'dict'> {
      'bases': <class 'list'> [
        <class 'list'> [
          31,
          32,
          31,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          32,
          32,
        ],
        <class 'list'> [
          31,
          32,
          32,
          32,
          31,
        ],
        <class 'list'> [
          31,
          31,
          32,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          31,
          31,
        ],
      ],
      'composition': <class 'list'> [
        <class 'list'> [
          19,
          90,
          1,
          1,
        ],
        <class 'list'> [
          29,
          6,
          74,
          1,
        ],
        <class 'list'> [
          82,
          69,
          1,
          1,
        ],
        <class 'list'> [
          78,
          88,
          1,
          1,
        ],
      ],
      'count': 8997239604,
      'encoding': '
        Sanger / Illumina 1.9
  
      ',
      'gc': 90,
      'length': <class 'list'> [
        42,
        78,
      ],
      'sequences': <class 'list'> [
        3909,
        8896,
        1494,
        5243,
        1786,
        9031,
        2044,
        8852,
        9882,
        7290,
        9769,
        5194,
        4756,
        3102,
        540,
        7807,
        1471,
        2450,
        1314,
        8594,
        8549,
        3525,
        9497,
        7382,
        5855,
        5313,
        7969,
        3119,
        265,
        1919,
        6095,
        5448,
        1018,
      ],
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/sample_1/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'sample_1',
        'size': 16700094,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    },
  }
---
# name: test_create_fake_sample[True-True]
  <class 'dict'> {
    'all_read': True,
    'all_write': True,
    'artifacts': <class 'list'> [
    ],
    'caches': <class 'list'> [
    ],
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'format': 'fastq',
    'group': 'none',
    'group_read': True,
    'group_write': True,
    'hold': True,
    'host': 'Vine',
    'id': 'sample_1',
    'is_legacy': False,
    'isolate': 'Isolate A1',
    'job': None,
    'labels': <class 'list'> [
    ],
    'library_type': <LibraryType.normal: 'normal'>,
    'locale': '',
    'name': 'Fake SAMPLE_1',
    'notes': 'Serious inside else memory if six.',
    'nuvs': False,
    'paired': True,
    'pathoscope': False,
    'quality': <class 'dict'> {
      'bases': <class 'list'> [
        <class 'list'> [
          31,
          32,
          31,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          32,
          32,
        ],
        <class 'list'> [
          31,
          32,
          32,
          32,
          31,
        ],
        <class 'list'> [
          31,
          31,
          32,
          31,
          32,
        ],
        <class 'list'> [
          32,
          31,
          32,
          31,
          31,
        ],
      ],
      'composition': <class 'list'> [
        <class 'list'> [
          19,
          90,
          1,
          1,
        ],
        <class 'list'> [
          29,
          6,
          74,
          1,
        ],
        <class 'list'> [
          82,
          69,
          1,
          1,
        ],
        <class 'list'> [
          78,
          88,
          1,
          1,
        ],
      ],
      'count': 8997239604,
      'encoding': '
        Sanger / Illumina 1.9
  
      ',
      'gc': 90,
      'length': <class 'list'> [
        42,
        78,
      ],
      'sequences': <class 'list'> [
        3909,
        8896,
        1494,
        5243,
        1786,
        9031,
        2044,
        8852,
        9882,
        7290,
        9769,
        5194,
        4756,
        3102,
        540,
        7807,
        1471,
        2450,
        1314,
        8594,
        8549,
        3525,
        9497,
        7382,
        5855,
        5313,
        7969,
        3119,
        265,
        1919,
        6095,
        5448,
        1018,
      ],
    },
    'reads': <class 'list'> [
      <class 'dict'> {
        'download_url': '/samples/sample_1/reads/reads_1.fq.gz',
        'id': 1,
        'name': 'reads_1.fq.gz',
        'name_on_disk': 'reads_1.fq.gz',
        'sample': 'sample_1',
        'size': 35441105,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
      <class 'dict'> {
        'download_url': '/samples/sample_1/reads/reads_2.fq.gz',
        'id': 2,
        'name': 'reads_2.fq.gz',
        'name_on_disk': 'reads_2.fq.gz',
        'sample': 'sample_1',
        'size': 41550519,
        'upload': None,
        'uploaded_at': datetime.datetime(2015, 10, 6, 20, 0),
      },
    ],
    'ready': True,
    'subtractions': <class 'list'> [
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflows': <class 'dict'> {
      'aodp': <WorkflowState.INCOMPATIBLE: 'incompatible'>,
      'nuvs': <WorkflowState.NONE: 'none'>,
      'pathoscope': <WorkflowState.NONE: 'none'>,
    },
  }
---
